k8s/worker-deployment.yaml
# Deployment for multi-worker pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 # TODO: will scale this later
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: rallycoding/multi-worker
