k8s/server-cluster-ip-service.yaml
# ClusterIP service for server-deployment
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server # selects the server-deployment deployment
  ports:
    - port: 5000 # port for other pods/containers in the cluster to access the selected pod(s)
      targetPort: 5000 # forward incoming traffic to this port in the selected pod(s)
